<resources>
    <string name="app_name">Cubed: Game Collector</string>
    <string name="app_version" translatable="false">2.4</string>
    <string name="app_email" translatable="false">appdev.mcardag@gmail.com</string>
    <string name="app_github" translatable="false">https://github.com/mcd-3/cubed-game-collector</string>
    <string name="shared_preference_key" translatable="false">com.matthew.carvalhodagenais.gamecubecollector.PREFERENCE_KEY</string>
    <string name="shared_preference_theme_key" translatable="false">SELECTED_THEME</string>
    <string name="shared_preference_theme_device" translatable="false">100</string>
    <string name="shared_preference_theme_cubed" translatable="false">101</string>
    <string name="shared_preference_theme_cubed_dark" translatable="false">102</string>
    <string name="shared_preference_theme_cubed_night" translatable="false">103</string>
    <string name="shared_preference_theme_cubed_dolphin" translatable="false">104</string>
    <string name="shared_preference_theme_cubed_ps" translatable="false">105</string>
    <string name="shared_preference_theme_cubed_pss" translatable="false">106</string>
    <string name="menu_delete_title">Delete</string>
    <string name="menu_save_title">Save</string>
    <string name="menu_add_title">Add</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_games_title">Games</string>
    <string name="menu_consoles_title">Consoles</string>
    <string name="menu_accessories_title">Accessories</string>
    <string name="menu_favourites_title">Favourites</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_about_title">About</string>
    <string name="menu_navigation_collection_title">Collection</string>
    <string name="menu_navigation_other_title">Other</string>
    <string name="game_info_label"><u>Game Info</u></string>
    <string name="game_image_label"><u>Cover Art</u></string>
    <string name="console_info_label"><u>Console Info</u></string>
    <string name="console_image_label"><u>Console Image</u></string>
    <string name="accessory_info_label"><u>Accessory Info</u></string>
    <string name="accessory_image_label"><u>Accessory Image</u></string>
    <string name="more_details_label"><u>More Details</u></string>
    <string name="region_label">Region:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="buy_date_label">Date Purchased:</string>
    <string name="cib_label">Completeness:</string>
    <string name="condition_label">Condition:</string>
    <string name="modded_label">Modded:</string>
    <string name="price_label">Price Paid:</string>
    <string name="description_label">Description:</string>
    <string name="themes_label">Themes</string>
    <string name="completeness_cib">CIB</string>
    <string name="completeness_case">With Case</string>
    <string name="completeness_manual">With Manual</string>
    <string name="completeness_disc">Disc Only</string>
    <string name="no_price" translatable="false">0.00</string>
    <string name="no_region">No Region</string>
    <string name="no_condition" translatable="false">N/A</string>
    <string name="no_date" translatable="false">N.D</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_game_title">No Games in your Collection</string>
    <string name="no_game_subtitle">Click &quot;+&quot; to add a new game</string>
    <string name="no_console_title">No Consoles in your Collection</string>
    <string name="no_console_subtitle">Click &quot;+&quot; to add a new console</string>
    <string name="no_accessory_title">No Accessories in your Collection</string>
    <string name="no_accessory_subtitle">Click &quot;+&quot; to add a new accessory</string>
    <string name="no_favourite_games_title">No Favourite Games in your Collection</string>
    <string name="no_favourite_games_subtitle">Go set some games as favourites!</string>
    <string name="delete_data_label_title">Delete All Data</string>
    <string name="export_data_label_title">Export Data</string>
    <string name="delete_data_label_subtitle">WARNING: Deletes all in-app data</string>
    <string name="export_data_label_subtitle">Export to a CSV file</string>
    <string name="about_app">An open source game collecting app for all your Gamecube needs!</string>
    <string name="disclaimer">We are not affiliated, associated, authorized, endorsed by, or in any way officially connected with Nintendo Co., Ltd, or any of its subsidiaries or its affiliates.</string>
    <string name="disclaimer_part_two">The names Gamecube and Dolphin as well as related names, marks, emblems and images are registered trademarks of their respective owners.</string>
    <string name="email_label">Email</string>
    <string name="github_label" translatable="false">Github</string>
    <string name="version_label">Version: </string>
    <string name="device_theme">Device Theme</string>
    <string name="cubed_theme">Cubed</string>
    <string name="cubed_dark_theme">Cubed Dark</string>
    <string name="night_theme">Night</string>
    <string name="dolphin_theme">Dolphin</string>
    <string name="player_selection_theme">Player Selection</string>
    <string name="player_silver_theme">Silver Player</string>
    <string name="game_list_image_view_content_description">Game cover art</string>
    <string name="game_detail_image_view_content_description">Game cover art</string>
    <string name="game_add_edit_image_view_content_description">Game cover art</string>
    <string name="game_add_edit_cover_image_view_content_description">Click me to change image</string>
    <string name="game_detail_favourite_image_button_view_content_description">Favourite button</string>
    <string name="game_add_edit_favourite_image_button_view_content_description">Favourite button</string>
    <string name="game_list_star_image_view_content_description">Favourite</string>
    <string name="game_add_edit_calendar_image_button_content_description">Pick a Date</string>
    <string name="game_add_edit_clear_image_button_content_description">Clear Date</string>
    <string name="game_list_no_games_content_description">No Games</string>
    <string name="console_list_no_consoles_content_description">No Consoles</string>
    <string name="accessory_list_no_accessories_content_description">No Accessories</string>
    <string name="logo_content_description">App Logo</string>
    <string name="console_list_image_view_content_description">Console Image</string>
    <string name="accessory_list_image_view_content_description">Accessory Image</string>
    <string name="game_detail_delete_alert_title">Delete Game?</string>
    <string name="game_detail_delete_alert_body">Are you sure you want to delete this game?</string>
    <string name="console_detail_delete_alert_title">Delete Console?</string>
    <string name="console_detail_delete_alert_body">Are you sure you want to delete this console?</string>
    <string name="accessory_detail_delete_alert_title">Delete Accessory?</string>
    <string name="accessory_detail_delete_alert_body">Are you sure you want to delete this accessory?</string>
    <string name="delete_all_data_alert_title">Delete all data?</string>
    <string name="delete_all_data_alert_body">Are you sure you want to delete all in-app data?\n\nThis includes games, consoles, accessories, and images.\n\nTHIS IS A PERMANENT ACTION</string>
    <string name="delete_alert_positive">Delete</string>
    <string name="delete_alert_negative" translatable="false">@android:string/cancel</string>
    <string name="game_add_edit_change_image_title">Change Image How?</string>
    <string name="discard_changes_title">Discard Changes?</string>
    <string name="discard_changes_body">Any unsaved changes will be lost</string>
    <string name="no_title_available">No Title</string>
    <string name="no_developer_available">No Developer</string>
    <string name="no_date_available" translatable="false">N.D</string>
    <string name="no_region_available" translatable="false" />
    <string name="no_publisher_available">No Publisher</string>
    <string name="no_description_available">No Description</string>
    <string name="developer_title">Developer: </string>
    <string name="developers_title">Developers: </string>
    <string name="publisher_title">Publisher: </string>
    <string name="publishers_title">Publishers: </string>
    <string name="game_title_hint">Game Title</string>
    <string name="game_developer_hint">Developer</string>
    <string name="game_publisher_hint">Publisher</string>
    <string name="game_release_date_hint">Release Date</string>
    <string name="game_buy_date_hint">Date Bought</string>
    <string name="game_price_paid_hint">Price Paid</string>
    <string name="console_title_hint">Console Title</string>
    <string name="console_description_hint">Description</string>
    <string name="accessory_title_hint">Accessory Title</string>
    <string name="accessory_description_hint">Description</string>
    <string name="date_default">No Date Set</string>
    <string name="case_checkbox_label">Case</string>
    <string name="manual_checkbox_label">Manual</string>
    <string name="toast_favourite">Favourited!</string>
    <string name="toast_no_title_warning">Enter a title</string>
    <string name="toast_game_saved">Game Saved!</string>
    <string name="no_camera">No camera</string>
    <string name="camera_cancelled">Camera cancelled</string>
    <string name="gallery_cancelled">Gallery cancelled</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="saved_to_downloads">Saved to Downloads!</string>
    <string name="drawer_layout_open">Open</string>
    <string name="drawer_layout_close">Close</string>
    <string name="star_border_tag" translatable="false">0</string>
    <string name="star_filled_tag" translatable="false">1</string>
    <string name="empty" translatable="false" />
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ith_favourite">Favourite</string>
    <string name="ith_delete">Delete</string>
    <string name="navigation_game_list_title">My Games</string>
    <string name="navigation_game_details_title">Details</string>
    <string name="navigation_game_edit_title">Edit Game</string>
    <string name="navigation_game_add_title">Add Game</string>
    <string name="navigation_favourites">Favourites</string>
    <string name="navigation_console_list_title">My Consoles</string>
    <string name="navigation_console_details_title">Details</string>
    <string name="navigation_console_edit_title">Edit Console</string>
    <string name="navigation_console_add_title">Add Console</string>
    <string name="navigation_accessory_list_title">My Accessories</string>
    <string name="navigation_accessory_details_title">Details</string>
    <string name="navigation_accessory_edit_title">Edit Accessory</string>
    <string name="navigation_accessory_add_title">Add Accessory</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_about">About Us</string>
    <string name="cubed">Cubed</string>
    <string name="collector">Game\nCollector</string>
    <string name="collector_land">Game Collector</string>
    <string name="menu_edit_title">Edit</string>
</resources>