<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/small"
    android:layout_marginEnd="@dimen/small"
    android:layout_marginTop="@dimen/very_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!-- Picture of accessory -->
        <ImageView
            android:id="@+id/accessory_image_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/huge"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/very_small"
            android:layout_marginEnd="@dimen/very_small"
            android:layout_marginTop="@dimen/very_small"
            android:layout_marginBottom="@dimen/very_small"
            android:contentDescription="@string/accessory_list_image_view_content_description" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                style="@style/TextAppearance.AppCompat.Large"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/no_title_available"/>

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginBottom="@dimen/small"
                android:layout_below="@id/title_text_view"
                style="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="italic"
                android:maxLines="4"
                android:ellipsize="end"
                android:layout_alignParentBottom="true"
                android:text="@string/no_description_available" />

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>